# glz-sql

./: AGENTS.md  CMakeLists.txt  README.md  vcpkg.json
cmake/: glaze-sql-config.cmake.in  glz-sql-config.cmake.in
docs/superpowers/plans/: 2026-06-04-iterator-implementation.md  2026-06-04-multi-condition-where-plan.md  2026-06-04-nttp-column-plan.md  2026-06-04-sql-repository-implementation.md
docs/superpowers/specs/: 2026-06-04-iterator-design.md  2026-06-04-multi-condition-where-design.md  2026-06-04-sql-repository-design.md
include/glaze_sql/: condition.hpp  database.hpp  fixed_string.hpp  sql_repository.hpp  sqlite_bind.hpp
include/glz-sql/: condition.hpp  database.hpp  sql_repository.hpp  sqlite_bind.hpp
test/: CMakeLists.txt  test_sql_repository.cpp  test_sqlite_bind.cpp
